# learn_auth

./: CLAUDE.md  Makefile  docker-compose.yml  pyproject.toml  ruff.toml
.claude/: CLAUDE.md
alembic/: env.py
alembic/versions/: 2026_03_03_001_initial_schema.py  2026_03_08_001_add_auth_tables.py
docs/api/: auth_api_contract.md
docs/guides/: auth_workbook.md
docs/guides/0_init_workbooks/: auth_workbook.docx
docs/guides/1_jwt_auth_system/: README.md  part_1_jwt_fundamentals.md  part_2_models_and_alembic.md  part_3_core_auth.md  part_4_email_features.md  part_5_authenticated_user.md  part_6_session_management.md  part_7_admin.md  part_8_security_hardening.md  part_9_integration_guide.md
scripts/: seed_todos.py
src/learn_auth/: main.py
src/learn_auth/app/api/v1/: routers.py
src/learn_auth/app/api/v1/endpoints/: todos.py
src/learn_auth/app/core/: config.py  database.py  deps.py  security.py
src/learn_auth/app/models/: auth.py  todos.py
src/learn_auth/app/schemas/: todos.py
src/learn_auth/app/services/: todos.py
tests/small/: test_security.py
